--- a/.github/workflows/jrtt.yml
+++ b/.github/workflows/jrtt.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 快看点
+name: 今日头条极速版
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '*/13 * * * *'
   watch:
     types: started
   repository_dispatch:
-    types: kkd
+    types: jrtt
 jobs:
   build:
 
@@ -35,12 +35,18 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【快看点】'
+      - name: '运行 【今日头条极速版】'
         run: |
-          node kkd.js
+          node jrtt.js
         env:
-          KKDHEADER: ${{ secrets.KKDHEADER }}
-          KKDCOOKIE: ${{ secrets.KKDCOOKIE }}
+          JRTTSIGNURL: ${{ secrets.JRTTSIGNURL }}
+          JRTTSIGNKEY: ${{ secrets.JRTTSIGNKEY }}
+          JRTTFARMURL: ${{ secrets.JRTTFARMURL }}
+          JRTTFARMKEY: ${{ secrets.JRTTFARMKEY }}
+          JRTTREADURL: ${{ secrets.JRTTREADURL }}
+          JRTTREADKEY: ${{ secrets.JRTTREADKEY }}
+          JRTTCOLLECT: ${{ secrets.JRTTCOLLECT }} 
+          JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
