--- a/.github/workflows/baiduspeed.yml
+++ b/.github/workflows/baiduspeed.yml
@@ -27,7 +27,7 @@ jobs:
       - name: '运行 【百度极速】'
         if: env.BAIDU_COOKIE
         run: |
-          node baidu_speed.js
+          node Scripts/baidu_speed.js
         env:
           BAIDU_CASH: ${{ secrets.BAIDU_CASH }}
           BAIDU_TASK: ${{ secrets.BAIDU_TASK }}
@@ -38,4 +38,3 @@ jobs:
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-          REPOURL: https://github.com/Sunert/Scripts/tree/master/Task/
