--- a/.github/workflows/kkd.yml
+++ b/.github/workflows/kkd.yml
@@ -6,7 +6,7 @@ name: 快看点
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 */1 * * *'
   watch:
     types: started
   repository_dispatch:
