--- a/.github/workflows/hotsoon.yml
+++ b/.github/workflows/hotsoon.yml
@@ -1,32 +1,30 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 快看点
+name: 火山小视频
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */1 * * *'
+    - cron: '0 */6 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: kkd
+    types: started
 jobs:
   build:
-
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          repository: ZhiYi-N/script
+        run: |
+          git clone https://github.com/1217079729/TaskAction.git ~/TaskAction
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方缓存 Action。
+        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
         env:
           cache-name: cache-node-modules
         with:
@@ -34,13 +32,17 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: npm install
         run: |
-          npm install
-      - name: '运行 【快看点】'
+      - name: '运行 【火山小视频】'
         run: |
-          node kkd.js
+          node hotsoon.js
         env:
-          KKDHEADER: ${{ secrets.KKDHEADER }}
-          KKDCOOKIE: ${{ secrets.KKDCOOKIE }}
+          TZ: Asia/shanghai
+          HOTSOONSIGNHEADER: ${{ secrets. HOTSOONSIGNHEADER }}
+          HOTSOONSIGNKEY: ${{ secrets. HOTSOONSIGNKEY }}
+          HOTSOONADHEADER: ${{ secrets. HOTSOONADHEADER }}
+          HOTSOONADKEY: ${{ secrets. HOTSOONADKEY }}
+          HOTSOONREADHEADER: ${{ secrets. HOTSOONREADHEADER }}
+          HOTSOONREADKEY: ${{ secrets. HOTSOONREADKEY }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
@@ -49,4 +51,3 @@ jobs:
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          REPOURL: https://github.com/ZhiYi-N/script/
