--- a/.github/workflows/hotsoon.yml
+++ b/.github/workflows/hotsoon.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 火山小视频
+name: 火山小视频极速版
 
 on:
   workflow_dispatch:
@@ -34,7 +34,7 @@ jobs:
         run: |
       - name: '运行 【火山小视频】'
         run: |
-          node hotsoon.js
+          node Scripts/hotsoon.js
         env:
           TZ: Asia/shanghai
           HOTSOONSIGNHEADER: ${{ secrets. HOTSOONSIGNHEADER }}
