--- a/.github/workflows/hotsoon.yml
+++ b/.github/workflows/hotsoon.yml
@@ -6,25 +6,27 @@ name: 火山小视频极速版
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '*/5 * * * *'
   watch:
     types: started
   repository_dispatch:
-    types: started
+    types: hotsoon
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/1217079729/TaskAction.git ~/TaskAction
+        uses: actions/checkout@v2
+        with:
+          repository: ZhiYi-N/script
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
+        uses: actions/cache@v2 # 使用 GitHub 官方缓存 Action。
         env:
           cache-name: cache-node-modules
         with:
@@ -32,11 +34,11 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: npm install
         run: |
-      - name: '运行 【火山小视频】'
+          npm install
+      - name: '运行 【火山小视频极速版】'
         run: |
-          node Scripts/hotsoon.js
+          node hotsoon.js
         env:
-          TZ: Asia/shanghai
           HOTSOONSIGNHEADER: ${{ secrets. HOTSOONSIGNHEADER }}
           HOTSOONSIGNKEY: ${{ secrets. HOTSOONSIGNKEY }}
           HOTSOONADHEADER: ${{ secrets. HOTSOONADHEADER }}
