--- a/.github/workflows/kkd.yml
+++ b/.github/workflows/kkd.yml
@@ -49,4 +49,4 @@ jobs:
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          REPOURL: https://github.com/ZhiYi-N/script/
+          REPOURL: https://github.com/ZhiYi-N/Private-Script/tree/master/Scripts/
