--- a/.github/workflows/kkd.yml
+++ b/.github/workflows/kkd.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: ZhiYi-N/script
+          repository: ZhiYi-N/Private-Script
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -37,7 +37,7 @@ jobs:
           npm install
       - name: '运行 【快看点】'
         run: |
-          node kkd.js
+          node Scripts/kkd.js
         env:
           KKDHEADER: ${{ secrets.KKDHEADER }}
           KKDCOOKIE: ${{ secrets.KKDCOOKIE }}
@@ -49,4 +49,4 @@ jobs:
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          REPOURL: https://github.com/ZhiYi-N/Private-Script/tree/master/Scripts/
+          REPOURL: https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kkd.js
