--- a/.github/workflows/kkd.yml
+++ b/.github/workflows/kkd.yml
@@ -6,7 +6,7 @@ name: 快看点
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 */1 * * *'
   watch:
     types: started
   repository_dispatch:
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: ZhiYi-N/script
+          repository: r0ckrise/Self_Actions
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -37,7 +37,7 @@ jobs:
           npm install
       - name: '运行 【快看点】'
         run: |
-          node kkd.js
+          node Scripts/kkd.js
         env:
           KKDHEADER: ${{ secrets.KKDHEADER }}
           KKDCOOKIE: ${{ secrets.KKDCOOKIE }}
