--- a/.github/workflows/bbb.yml
+++ b/.github/workflows/bbb.yml
@@ -30,4 +30,10 @@ jobs:
               run: |
                   node Scripts/bbb.js
               env:
-                  BBB_COOKIE: ${{ secrets.BBB_COOKIE2 }}     
+                  BBB_COOKIE: ${{ secrets.BBB_COOKIE2 }}    
+                  
+            - name: "运行【步步宝3】"
+              run: |
+                  node Scripts/bbb.js
+              env:
+                  BBB_COOKIE: ${{ secrets.BBB_COOKIE3 }}                   
