--- a/.github/workflows/zmsp.yml
+++ b/.github/workflows/zmsp.yml
@@ -28,7 +28,7 @@ jobs:
       - name: '运行 【zmsp】'
         if: env.ZM_HD
         run: |
-          node scripts/zmsp.js
+          node Scripts/zmsp.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
